# synlink-py

./: .gitignore  README.md  example.py  list_example.py  pyproject.toml  readme.md  requirements-dev.txt  requirements.txt  setup.py
src/synlinkpy/: __init__.py
synlink_py/: __init__.py
