[build-system]
requires = ["hatchling", "requests", "requests-toolbelt"]  
build-backend = "hatchling.build"

[project]
name = "synlinkpy"
version = "0.0.14"
authors = [
  { name="Kevin Han", email="kevin.han@synaccess.com" },
]
description = "HTTP Python Wrapper for Synaccess SynLink PDU HTTP API."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/synaccess/synlink-py"
"Bug Tracker" = "https://github.com/synaccess/synlink-py/issues"